--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
+    "@types/canvas-confetti": "^1.9.0",
     "axios": "^1.8.4",
+    "canvas-confetti": "^1.9.3",
     "framer-motion": "^12.6.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
